--- a/SmartSightFrontEnd/MainWindow.xaml
+++ b/SmartSightFrontEnd/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SmartSightFrontEnd"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="900">
+        Title="MainWindow" Height="1000" Width="1600
+       ">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -44,5 +45,7 @@
         <TextBlock Text="Gesture Recognition" Grid.Column="1" Grid.Row="2" />
 
         <Image x:Name="GestureDisplay" Grid.Column="1" Grid.Row="3" />
+
+        <TextBlock Grid.Column="2" x:Name="FingersDetectedDisplay" />
     </Grid>
 </Window>
